VDSEC-101 PII Detection Export